// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accomodation Item  Page should render accomodation item page correctly 1`] = `
<div>
  <h2 />
  <div>
    <h4>
      Accomodation Type
    </h4>
    <ul>
      Apart
    </ul>
  </div>
  <ul>
    <h4>
      Facilities
    </h4>
  </ul>
  <button
    className="button"
    onClick={[Function]}
  >
    See our last available rooms &gt;
  </button>
</div>
`;

exports[`Accomodation Item  Page should render type if type exists 1`] = `
<div>
  <h2 />
  <ul>
    <h4>
      Facilities
    </h4>
    <li
      key="1"
      label="bed"
    >
      bed
    </li>
  </ul>
  <button
    className="button"
    onClick={[Function]}
  >
    See our last available rooms &gt;
  </button>
</div>
`;
